test/expected/declare_o_oexclam_k_b.out
struct S; declare ! as overridden operator (S) returning bool
         ^
10: error: member operator ! must have exactly 0 parameters
